--- a/index.html
+++ b/index.html
@@ -431,20 +431,11 @@
             <!--工具栏详细操作菜单-->
             <div id="tool-operation" class='panel1 dp-none'>
                 <div id="tool-addAnimation-operation" class="tool-app-items">
-                    <div class="operation-item" data-event="changeSliderAnim" data-param="none">无效果</div>
-                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-move-left">从左闪入</div>
-                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-move-right">从右闪入</div>
-                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-move-top">从上闪入</div>
-                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-move-bottom">从下闪入</div>
-                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-move-top-left">从左上闪入</div>
-                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-move-top-right">从右上闪入</div>
-                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-move-bottom-left">从左下闪入</div>
-                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-move-bottom-right">从右下闪入</div>
+                    <div class="operation-item" data-event="changeSliderAnim" data-param="none">幻灯片</div>
                     <div class="operation-item" data-event="changeSliderAnim" data-param="anim-scale">放大</div>
                     <div class="operation-item" data-event="changeSliderAnim" data-param="anim-xSpin">左右翻转</div>
                     <div class="operation-item" data-event="changeSliderAnim" data-param="anim-ySpin">上下翻转</div>
-                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-rightRotate">顺时针旋转</div>
-                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-leftRotate">逆时针旋转</div>
+                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-rightRotate">旋转</div>
                 </div>
 <!--                 <div id="tool-elemOperation-operation" class="tool-app-items">
                     <div class="operation-item"  data-event="copyElement" data-param="">复制</div>
