--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
                 </div>
             </div>
             <div id='shapebar' class="transition-r allow" data-intro='图形工具栏' data-step='2' data-position='left'>
-                <div id='triangle' class='shape-icon' data-type='triangle' data-title="插入矩形"></div>
+                <div id='triangle' class='shape-icon' data-type='triangle' data-title="插入三角形"></div>
                 <div id='circular' class='shape-icon' data-type='circular' data-title="插入圆形"></div>
-                <div id='rectangle' class='shape-icon' data-type='rectangle' data-title="插入三角形"></div>
+                <div id='rectangle' class='shape-icon' data-type='rectangle' data-title="插入矩形"></div>
                 <div id='heart' class='shape-icon' data-type='heart' data-title="插入心形"></div>
                 <div id='star' class='shape-icon' data-type='star' data-title="插入星形"></div>
                 <div id='message' class='shape-icon' data-type='message' data-title="插入消息框图形"></div>
