--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 <!-- 360 chrome -->
                 <a href="http://chrome.360.cn/" style='width:100px;height:100px;out-line:0;border:0;background-image:url(./img/360chrome.png);float:left;' title='360 极速浏览器'></a>
             </div>
-            <center style='position:relative;font-size:36px;color:white;top:200px;'>请使用chrome系列极速浏览器</center>
+            <center style='position:relative;font-size:36px;color:white;top:200px;'>请使用最新版本的chrome系列极速浏览器</center>
         </div>
         <!-- cordova for mobile is used by phonegap -->
 
