add preview play and remove help intro

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         </style>
     </head>
     <body >
+        <div id='previewContainer' class='panel1 dp-none'>
+            <div class='close-menu' title='关闭预览'></div>
+        </div>
         <div id='appContainer'>
             <div id="filesystem" class="sui-disp-none">
                 <!-- Navigation Bar -->
@@ -406,6 +409,7 @@
                     <div id="tool-enterPreviewMode" class="tool-app" data-title="保存" data-intro='保存' data-step='5'></div>
 <!--                     <div id="tool-addslider" class="tool-app" data-title="添加新的幻灯片" data-intro='添加新的幻灯片' data-step='6'></div> -->
                     <div id="tool-openFileSystem" class="tool-app " data-title="打开保存的幻灯片文件" data-intro='打开保存文件' data-step='7'></div>
+                    <div id="tool-play" class="tool-app" data-title="预览"></div>
                     <div id="tool-addAnimation" class="tool-app ondetail" data-title="更改幻灯片过渡动画" data-intro='更改幻灯片过渡动画' data-step='8'></div>
                     <div id="tool-addVideo" class="tool-app" data-title="添加视频(暂时只支持Mmp4格式)" data-intro='添加视频' data-step='9'>
                         <input type="file" id="addVideoInp"/>
@@ -426,7 +430,7 @@
                     <!--
                     <div id="tool-deleteSlider" class="tool-app" data-title="删除当前幻灯片" data-intro='删除当前幻灯片' data-step='16'></div>
                     -->
-                    <div id="tool-help" class="tool-app" data-title="帮助" data-intro='帮助' data-step='15'></div>
+<!--                     <div id="tool-help" class="tool-app" data-title="帮助" data-intro='帮助' data-step='15'></div> -->
                 </div>
             </div>
             <!--工具栏详细操作菜单-->
