--- a/index.html
+++ b/index.html
@@ -438,8 +438,8 @@
                 <div id="tool-addAnimation-operation" class="tool-app-items">
                     <div class="operation-item" data-event="changeSliderAnim" data-param="none">幻灯片</div>
                     <div class="operation-item" data-event="changeSliderAnim" data-param="anim-scale">放大</div>
-                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-xSpin">左右翻转</div>
-                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-ySpin">上下翻转</div>
+                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-xSpin">左翻转</div>
+                    <div class="operation-item" data-event="changeSliderAnim" data-param="anim-ySpin">右翻转</div>
                     <div class="operation-item" data-event="changeSliderAnim" data-param="anim-rightRotate">旋转</div>
                 </div>
             </div>
