--- a/index.html
+++ b/index.html
@@ -498,5 +498,17 @@
         <script data-main="js/loader.js" src="web.fs.mobile/src/lib/require.js"></script>
         <script type="text/javascript" src='sourceMap.js'></script>
         <script type="text/javascript" src="js/html2canvas.js"></script>
+        <script type="text/javascript">
+          var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-40089255-1']);
+          _gaq.push(['_trackPageview']);
+
+          (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
+
+        </script>
     </body>
 </html>
