--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </style>
     </head>
     <body >
-        <div id='previewContainer' class='panel1 dp-none'>
+        <div id='previewContainer' class='panel1 dp-none op-full'>
             <div class='close-menu' title='关闭预览'></div>
         </div>
         <div id='appContainer'>
