--- a/index.html
+++ b/index.html
@@ -461,8 +461,12 @@
                 <div class='menu-item' data-type='insert' data-event='addSlider'>插入</div>
                 <div class='menu-item' data-type='delete' data-event='deleteSlider'>删除</div>
             </div>
-            <div id="view" class="cf" data-step='4' data-position='right'>
-                <div id="frame-list" class="anim-move-left cf"></div>
+            <div id="view" class="cf flb-box">
+                <div class="flb-p1"></div>
+                <!-- <div class=""> -->
+                    <div id="frame-list" class="anim-move-left cf"></div>
+                <!-- </div> -->
+                <div class="flb-p1"></div>
             </div>
             <!--footer-->
             <div style='display:none' id='header'></div>
