fix view bar display bug

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             <div id="view" class="cf flb-box">
                 <div class="flb-p1"></div>
                 <!-- <div class=""> -->
-                    <div id="frame-list" class="anim-move-left cf"></div>
+                    <div id="frame-list" class="cf anim-move-left "></div>
                 <!-- </div> -->
                 <div class="flb-p1"></div>
             </div>
